syntax = "proto3";


package go.micro.service.auth;

service Auth {
	rpc LogIn(RequestAuthLogIn) returns (ResponseLogIn) {}
	rpc AuthPath(RequestAuthPath) returns (ResponseAuthPath) {}
	rpc GetByID(RequestAuthID) returns (ResponseAuth) {}
	rpc Create(RequestCreateAuth) returns (ResponseAuth) {}
	rpc Update(RequestUpdateAuth) returns (ResponseAuth) {}
	rpc Delete(RequestAuthID) returns (ResponseAuth) {}
}

message RequestAuthID {
	string id = 1;
}

message ResponseAuth {
	string id = 1;
	string name = 2;
	string phone = 3;
	string address = 4;
	string district = 5;
	string department = 6;
	repeated string actions = 7;

	int64 createdAt = 8;
	int64 modifiedAt = 9;
	int64 deletedAt = 10;
}

message RequestAuthLogIn {
	string email = 1;
	string password = 2;
}

message ResponseLogIn {
	string token = 1;
}

message RequestAuthPath {
	string token = 1;
	string path = 2;
	string method = 3;
}

message ResponseAuthPath {
	bool authorized = 1;
}

message RequestCreateAuth {
	string name = 1;
	string phone = 2;
	string address = 3;
	string district = 4;
	string department = 5;
	repeated string actions = 6;
}

message RequestUpdateAuth {
	string id = 1;
	string name = 2;
	string phone = 3;
	string address = 4;
	string district = 5;
	string department = 6;
	repeated string actions = 7;
}
